--- a/style.css
+++ b/style.css
@@ -347,6 +347,8 @@ section .title{
 }
 
 .about .about-content .left img {
+     width: 400px;
+    height: 400px;
     object-fit: cover;
     border-radius: 6px;
 }
